crates/nash-report/tests/parse/expression/snapshots/parse__expression__tuple__error_empty_comma.snap
---
source: crates/nash-report/tests/parse/expression/tuple.rs
assertion_line: 15
description: "Code:\n\n(,)"
info: diagnostic
---
nash::syntax

  × Expected an expression or `)`.
   ╭─[src/Main.nash:1:2]
 1 │ (,)
   ·  ─
   ╰────
  help: Add an expression inside the parentheses.
