crates/nash-report/tests/parse/expression/snapshots/parse__expression__tuple__error_section_missing_operand.snap
---
source: crates/nash-report/tests/parse/expression/tuple.rs
assertion_line: 30
description: "Code:\n\n(> ,)"
info: diagnostic
---
nash::syntax

  × Expected an expression in some parentheses.
   ╭─[src/Main.nash:1:4]
 1 │ (> ,)
   ·    ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
