crates/nash-report/tests/parse/expression/snapshots/parse__expression__tuple__error_trailing_comma.snap
---
source: crates/nash-report/tests/parse/expression/tuple.rs
assertion_line: 10
description: "Code:\n\n(1, 2,)"
info: diagnostic
---
nash::syntax

  × Expected an expression before the closing delimiter.
   ╭─[src/Main.nash:1:7]
 1 │ (1, 2,)
   ·       ─
   ╰────
  help: Add the missing expression, or remove a trailing comma.
