crates/nash-report/tests/parse/expression/snapshots/parse__expression__tuple__error_unclosed.snap
---
source: crates/nash-report/tests/parse/expression/tuple.rs
assertion_line: 5
description: "Code:\n\n(1, 2"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:6]
 1 │ (1, 2
   · ┬    ┬
   · │    ╰── expected `)`
   · ╰── opened here
   ╰────
  help: Add `)` here.
